<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:gravity="center_horizontal"
    android:background="@drawable/rectangle_alertdialog">
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:text="@string/prompt_msg"
            android:textColor="@color/blue"
            android:textSize="30sp"/>
        
    </RelativeLayout>
    <ImageView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line3_blue"
            android:layout_marginTop="5dp"/>
    <TextView 
        android:id="@+id/tv_promote_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_msg"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center_horizontal"
        >
        
        <Button 
            android:id="@+id/dialog_button_ok"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>

        <Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="0dp"
             android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="3dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>
</LinearLayout>