<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_color" >

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="3dp"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_below="@+id/et_old_password"
        android:layout_marginTop="3dp"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/et_new_password_repeat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_below="@+id/et_new_password"
        android:layout_marginTop="3dp"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:hint="@string/new_password_repeat"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/et_new_password_repeat"
        android:layout_marginTop="5dp"
        android:background="@color/btn_main_bg"
        android:text="@string/ok"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:textColor="@color/white" 
        android:textSize="16sp"
        android:gravity="center"/>

</RelativeLayout>