<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/translucence"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_menu_one"
        android:text="@string/cancel"
        android:textColor="@color/tv_blue_and_gray_selector"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_from_pictures"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_above="@+id/btn_cancel"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_menu_bottom"
        android:text="@string/local_pic"
        android:textColor="@color/tv_blue_and_gray_selector"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_from_camera"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_above="@+id/btn_from_pictures"
        android:layout_marginBottom="1dp"
        android:background="@drawable/btn_menu_top"
        android:text="@string/camera"
        android:textColor="@color/tv_blue_and_gray_selector"
        android:textSize="17sp" />

</RelativeLayout>